# CppFileToStringExperiments

./: CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  main.cpp  main.h  tests.cpp  tests.h
